backend: implement delete todo api
