# backend/controller/todo/share.go
@@ -10,4 +10,5 @@ var Group = core.NewGroup("/todos")
 func init() {
 	Group.Register(core.NewController("/records", http.MethodGet, listTodoRecords))
 	Group.Register(core.NewController("", http.MethodPost, createTodo))
+	Group.Register(core.NewController("/:id", http.MethodDelete, deleteTodo))
 }
