# backend/docs/swagger.json
@@ -38,6 +38,36 @@
                 }
             }
         },
+        "/todos/:id": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "待办管理"
+                ],
+                "summary": "删除待办",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/common.DetailRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/todos/records": {
             "get": {
                 "consumes": [
@@ -340,6 +370,15 @@
             "properties": {
                 "value": {
                     "type": "boolean"
+                }
+            }
+        },
+        "common.DetailRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "description": "@gotags: valid:\"required,objectId\"",
+                    "type": "string"
                 }
             }
         },
